package com.dms.user;

public enum Programme {
    MTECH,
    BTECH_MTECH_INTEGRATED
}
