@startuml DMS-Class-Diagram
' Dissertation Management System -- domain class diagram.
'
' Checked against the shipped entities and migrations V1-V11, not against the
' original plan. Where the two differ, the code wins and the difference is noted.
'
' Rendered PNG and SVG sit beside this file and are committed, so slides can use
' them without anyone installing PlantUML. To regenerate after an edit:
'   java -jar plantuml.jar -tpng -tsvg -o . docs/diagrams/*.puml
' This diagram is wide. For a slide, use the SVG and crop, or present it as two
' halves -- identity and session on one, the workflow chain on the other.
' Audit, notifications and the AI package are deliberately NOT here -- none of
' them is referenced by the workflow services, which publish events instead.
' They have their own diagram: cross-cutting-diagram.puml.

title Dissertation Management System — Domain Class Diagram

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 6
skinparam class {
  BackgroundColor White
  BorderColor #4A6572
  ArrowColor #4A6572
}
skinparam package {
  BackgroundColor #F7F9FA
  BorderColor #B0BEC5
}
hide empty members

package "com.dms.user" #F7F9FA {

  class User {
    - Long id
    - String email {unique}
    - String passwordHash
    - String fullName
    - boolean enabled
    - Instant createdAt
    - Set<Role> roles
  }

  enum Role {
    STUDENT
    SUPERVISOR
    REVIEWER
    COORDINATOR
    ADMIN
    --
    + String authority()
  }

  enum Programme {
    MTECH
    BTECH_MTECH_INTEGRATED
  }

  class StudentProfile {
    - Long id
    - String rollNo {unique}
    - Programme programme
    - String department
    - String batch
    - Integer semester
  }

  class SupervisorProfile {
    - Long id
    - String designation
    - String department
    - String researchInterests
    - int maxStudents
  }
}

package "com.dms.session" #F7F9FA {

  class AcademicSession {
    - Long id
    - String label
    - Programme programme
    - LocalDate startDate
    - LocalDate endDate
    - boolean active
  }

  class Milestone {
    - Long id
    - String name
    - String description
    - LocalDate dueDate
    - int weightage
    - int sequenceNo
  }
}

package "com.dms.topic" #F7F9FA {

  class Topic {
    - Long id
    - String title
    - String abstractText
    - String keywords
    - TopicStatus status
    - Integer version
    - String decisionReason
    - User decidedBy
    - Instant decidedAt
  }

  enum TopicStatus {
    DRAFT
    PROPOSED
    APPROVED
    CHANGES_REQUESTED
    REJECTED
  }
}

package "com.dms.allocation" #F7F9FA {

  class Allocation {
    - Long id
    - AllocationStatus status
    - String decisionReason
    - User allocatedBy
    - Instant requestedAt
    - Instant decidedAt
  }

  enum AllocationStatus {
    REQUESTED
    ACCEPTED
    DECLINED
    COORDINATOR_ASSIGNED
    WITHDRAWN
  }
}

package "com.dms.submission" #F7F9FA {

  class Submission {
    - Long id
    - SubmissionStatus status
    - int currentVersionNo
    - boolean late
    - String decisionNote
    - User decidedBy
    - Instant decidedAt
  }

  enum SubmissionStatus {
    DRAFT
    SUBMITTED
    UNDER_REVIEW
    APPROVED
    REVISION_REQUESTED
    REJECTED
  }

  class SubmissionVersion {
    - Long id
    - int versionNo
    - String storagePath
    - String originalFilename
    - String contentType
    - String sha256
    - long sizeBytes
    - String note
    - Instant submittedAt
  }
}

package "com.dms.review" #F7F9FA {

  class ReviewComment {
    - Long id
    - Integer pageNo
    - String body
    - boolean resolved
    - Instant resolvedAt
    - Instant createdAt
  }
}

package "com.dms.evaluation" #F7F9FA {

  class RubricCriterion {
    - Long id
    - String name
    - String description
    - int maxMarks
    - int weightage
    - int sequenceNo
  }

  class Evaluation {
    - Long id
    - Map<String, Integer> scores <<jsonb>>
    - BigDecimal total
    - String remarks
    - Instant submittedAt
  }
}

package "com.dms.viva" #F7F9FA {

  class VivaSchedule {
    - Long id
    - Instant scheduledAt
    - String venue
    - String panel
    - VivaStatus status
    - User scheduledBy
  }

  enum VivaStatus {
    SCHEDULED
    RESCHEDULED
    HELD
    CANCELLED
  }
}

' ---------- identity ----------
User "1" *-- "1..*" Role : roles
User "1" -- "0..1" StudentProfile : profile
User "1" -- "0..1" SupervisorProfile : profile
StudentProfile --> Programme
AcademicSession --> Programme

' ---------- session setup ----------
AcademicSession "1" *-- "0..*" Milestone : milestones
AcademicSession "1" *-- "0..*" RubricCriterion : rubric

' ---------- topic ----------
StudentProfile "1" -- "0..*" Topic : proposes
Topic "0..*" --> "0..1" SupervisorProfile : proposedSupervisor
Topic --> TopicStatus

' ---------- allocation ----------
StudentProfile "1" -- "0..*" Allocation
SupervisorProfile "1" -- "0..*" Allocation
Allocation "0..*" --> "1" AcademicSession
Allocation "0..*" --> "0..1" Topic : topic on record
Allocation --> AllocationStatus

' ---------- submission ----------
Allocation "1" -- "0..*" Submission
Submission "0..*" --> "1" Milestone
Submission "1" *-- "1..*" SubmissionVersion : immutable history
Submission --> SubmissionStatus
SubmissionVersion "1" -- "0..*" ReviewComment
ReviewComment "0..*" --> "1" User : reviewer

' ---------- evaluation and viva ----------
' Evaluation hangs off Allocation, not Submission: a student is marked once for
' the dissertation, not once per milestone upload.
Allocation "1" -- "0..*" Evaluation
Evaluation "0..*" --> "1" User : examiner
Allocation "1" -- "0..1" VivaSchedule
VivaSchedule --> VivaStatus

note bottom of SubmissionVersion
  Versions are append-only.
  A revision creates a new row;
  the previous upload is never
  overwritten or deleted.
end note

note right of Milestone
  M.Tech and the integrated degree
  share one codebase and differ
  only in Milestone rows. Adding a
  milestone is an INSERT, not a release.
end note

note right of Evaluation
  scores is JSONB keyed by criterion id,
  so adding a rubric criterion needs
  no migration. The weighted total is
  stored so a mark sheet never has to
  recompute history.
end note

note bottom of VivaSchedule
  The panel is free text, not its own
  table: external examiners are common
  and are usually not users of this
  system, so modelling them as accounts
  would mean logins for people who
  never sign in.
end note

@enduml
